--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -111,9 +111,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#long"
+       "#long\n",
+       "\n",
+       "def long(dnaSeq, superS=''):\n",
+       "    if len(dnaSeq) == 0:\n",
+       "        return superS\n",
+       "\n",
+       "    elif len(superS) == 0:\n",
+       "        superS = dnaSeq.pop(0)\n",
+       "        return long(dnaSeq, superS)\n",
+       "\n",
+       "    else:\n",
+       "        for i in range(len(dnaSeq)):\n",
+       "            currentSeq = dnaSeq[i]\n",
+       "            lenght = len(currentSeq)\n",
+       "\n",
+       "            for t in range(lenght // 2):\n",
+       "                ovr_len = lenght - t\n",
+       "\n",
+       "                if superS.startswith(currentSeq[t:]):\n",
+       "                    dnaSeq.pop(i)\n",
+       "                    return long(dnaSeq, currentSeq[:t] + superS)\n",
+       "\n",
+       "                if superS.endswith(currentSeq[:ovr_len]):\n",
+       "                    dnaSeq.pop(i)\n",
+       "                    return long(dnaSeq, superS + currentSeq[ovr_len:])\n",
+       "\n",
+       "\n",
+       "def fasta(fasta_file):\n",
+       "    sequences = []\n",
+       "    for record in SeqIO.parse(fasta_file, \"fasta\"):\n",
+       "        sequences.append(str(record.seq))\n",
+       "\n",
+       "    return long(sequences)\n",
+       "\n",
+       "\n",
+       "fasta_file = \"rosalind_long.txt\"\n",
+       "print(fasta(fasta_file))\n"
    ]
-  },
+},
   {
    "cell_type": "markdown",
    "metadata": {},
