--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -420,13 +420,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#bf"
+       "#bf\n",
+       "\n",
+       "def bf(n, edges):\n",
+       "    INF = 10**9\n",
+       "    D = [INF] * n\n",
+       "    D[0] = 0  \n",
+       "\n",
+       "    for i in range(n - 1):\n",
+       "        for u, v, w in edges:\n",
+       "            if D[u - 1] != INF and D[u - 1] + w < D[v - 1]:\n",
+       "                D[v - 1] = D[u - 1] + w\n",
+       "\n",
+       "    for i in range(n):\n",
+       "        if D[i] == INF:\n",
+       "            D[i] = 'x'\n",
+       "\n",
+       "    return \" \".join(map(str, D))\n",
+       "\n",
+       "\n",
+       "def parse(file_path):\n",
+       "    with open(file_path, \"r\") as file:\n",
+       "        lines = file.readlines()\n",
+       "        n, m = map(int, lines[0].split())\n",
+       "        edges = [tuple(map(int, line.split())) for line in lines[1:]]\n",
+       "        return bf(n, edges)\n",
+       "\n",
+       "\n",
+       "file1 = \"rosalind_bf 3.txt\"  \n",
+       "print(parse(file1))\n"
    ]
-  },
+},
   {
    "cell_type": "code",
    "execution_count": 7,
