--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -466,13 +466,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#nwc"
+       "#nwc\n",
+       "\n",
+       "def nwc(n, edges):\n",
+       "    dist = [float('inf')] * (n + 1)\n",
+       "    dist[1] = 0  \n",
+       "\n",
+       "    for i in range(n - 1):\n",
+       "        for u, v, w in edges:\n",
+       "            if dist[u] != float('inf') and dist[u] + w < dist[v]:\n",
+       "                dist[v] = dist[u] + w\n",
+       "\n",
+       "    for u, v, w in edges:\n",
+       "        if dist[u] != float('inf') and dist[u] + w < dist[v]:\n",
+       "            return 1  \n",
+       "\n",
+       "    return -1 \n",
+       "\n",
+       "\n",
+       "def graphs(k, graph_data):\n",
+       "    results = []\n",
+       "    for graph in graph_data:\n",
+       "        n, m, edges = graph\n",
+       "        result = nwc(n, edges)\n",
+       "        results.append(result)\n",
+       "    return results\n",
+       "\n",
+       "\n",
+       "with open(\"rosalind_nwc 2.txt\", \"r\") as file:\n",
+       "    k = int(file.readline().strip()) \n",
+       "    graph_data = []\n",
+       "\n",
+       "    for i in range(k):\n",
+       "        n, m = map(int, file.readline().split())  \n",
+       "        edges = []\n",
+       "        for j in range(m):\n",
+       "            u, v, w = map(int, file.readline().split())\n",
+       "            edges.append((u, v, w))\n",
+       "        graph_data.append((n, m, edges))\n",
+       "\n",
+       "\n",
+       "results = graphs(k, graph_data)\n",
+       "print(\" \".join(map(str, results)))\n"
    ]
-  },
+},
   {
    "cell_type": "code",
    "execution_count": null,
