--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -440,8 +440,8 @@
     "\n",
     "    return \" \".join(map(str, D))\n",
     "\n",
-    "def parse(file_path):\n",
-    "    with open(file_path, \"r\") as file:\n",
+    "def parse(file1):\n",
+    "    with open(file1, \"r\") as file:\n",
     "        lines = file.readlines()\n",
     "        n, m = map(int, lines[0].split())\n",
     "        edges = [tuple(map(int, line.split())) for line in lines[1:]]\n",
